[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleCommKitAiUdpClient"
dynamic = ["version"]
description = "SimpleCommKitAiUdpClient - AI-friendly UDP client toolkit (MCP server & REST API) powered by SimpleCommKitPyUdp."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "SimpleCommKit Team" }]
urls = { Homepage = "https://github.com/catgrayprj/SimpleCommKit" }
keywords = ["udp", "client", "networking", "mcp", "ai", "simplecommkit"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastmcp",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "httpx"]

[project.scripts]
simplecommkitaiudpclient-mcp = "SimpleCommKitAiUdpClient.mcp:main"
simplecommkitaiudpclient-http = "SimpleCommKitAiUdpClient.http:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.setuptools.dynamic]
version = {file = "../../VERSION"}
