cmake_minimum_required(VERSION 3.10)

project(mongoose LANGUAGES C)

# file(GLOB_RECURSE PROJECT_HEADERS ${3RDPARTY_PATH}/${PROJECT_NAME}/mongoose.h)
# file(GLOB_RECURSE PROJECT_SOURCES ${3RDPARTY_PATH}/${PROJECT_NAME}/mongoose.c)


# message("PROJECT_HEADERS: " ${PROJECT_HEADERS})
# set (PROJECT_FILES ${PROJECT_HEADERS} ${PROJECT_SOURCES})

add_library(${PROJECT_NAME} STATIC ${3RDPARTY_PATH}/${PROJECT_NAME}/mongoose.c)
target_compile_definitions(${PROJECT_NAME}
    PRIVATE
    APP_VERSION="${LIB_PROJECT_VERSION}"
)
target_include_directories(${PROJECT_NAME} PUBLIC
  $<BUILD_INTERFACE:${3RDPARTY_PATH}/${PROJECT_NAME}/>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)

install(TARGETS ${PROJECT_NAME}
    EXPORT mongooseTargets
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} 
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} 
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} 
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} 
)

install(DIRECTORY ${3RDPARTY_PATH}/${PROJECT_NAME}/
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include
    FILES_MATCHING PATTERN "*.h" 
    PATTERN "*.c" EXCLUDE       
    PATTERN "cmake" EXCLUDE      
)
