cmake_minimum_required(VERSION 3.10)


project(uSockets LANGUAGES C CXX)

file(GLOB_RECURSE PROJECT_HEADERS ${3RDPARTY_PATH}/${PROJECT_NAME}/src/*.h ${3RDPARTY_PATH}/${PROJECT_NAME}/src/*.hpp)
file(GLOB_RECURSE PROJECT_SOURCES ${3RDPARTY_PATH}/${PROJECT_NAME}/src/*.c ${3RDPARTY_PATH}/${PROJECT_NAME}/src/*.cpp)



set (PROJECT_FILES ${PROJECT_HEADERS} ${PROJECT_SOURCES})

add_library(${PROJECT_NAME} ${PROJECT_FILES})
target_compile_definitions(${PROJECT_NAME}
    PRIVATE
    APP_VERSION="${LIB_PROJECT_VERSION}"
    LIBUS_USE_LIBUV=1
    LIBUS_USE_OPENSSL=1
)
target_include_directories(${PROJECT_NAME} PUBLIC
  $<BUILD_INTERFACE:${3RDPARTY_PATH}/${PROJECT_NAME}/src>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
target_link_libraries(${PROJECT_NAME} PUBLIC uv ssl crypto)

install(TARGETS ${PROJECT_NAME}
    EXPORT uSocketsTargets
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} 
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} 
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} 
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} 
)

install(DIRECTORY ${3RDPARTY_PATH}/${PROJECT_NAME}/src/
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include
    FILES_MATCHING PATTERN "*.h" 
    PATTERN "*.c" EXCLUDE       
    PATTERN "cmake" EXCLUDE      
)
