[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-comm-kit-ble"
version = "0.1.0"
description = "SimpleCommKitPyBle - Python bindings for SimpleCommKit BLE C++ library"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
