[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-comm-kit-hid"
version = "0.1.0"
description = "SimpleCommKitPyHid - Python bindings for SimpleCommKit HID C++ library"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
