[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-comm-kit-serialport"
version = "0.1.0"
description = "SimpleCommKitPySerialPort - Python bindings for SimpleCommKit SerialPort C++ library"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
